--- a/css/main.css
+++ b/css/main.css
@@ -1078,7 +1078,7 @@ body {
   margin-right: 10px;
 }
 .powered-by::after {
-  content: "|";
+  /*content: "|";*/
   padding-left: 10px;
 }
 .cc-license {
